add support for burst-mode photogtaphy

--- a/EmergencyRecorder/app/src/main/AndroidManifest.xml
+++ b/EmergencyRecorder/app/src/main/AndroidManifest.xml
@@ -21,7 +21,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
-        tools:ignore="AllowBackup,GoogleAppIndexingWarning">
+        tools:ignore="AllowBackup,GoogleAppIndexingWarning"
+        android:largeHeap="true">
 
         <service
             android:name=".service.RecorderService"
