--- a/EmergencyRecorder/app/build.gradle
+++ b/EmergencyRecorder/app/build.gradle
@@ -55,4 +55,6 @@ dependencies {
     /* see: http://jcodec.org/ */
     implementation 'org.jcodec:jcodec:0.2.3'
     implementation 'org.jcodec:jcodec-android:0.2.3'
+
+    implementation "commons-io:commons-io:2.4"
 }
