--- a/EmergencyRecorder/app/build.gradle
+++ b/EmergencyRecorder/app/build.gradle
@@ -37,6 +37,9 @@ dependencies {
     androidTestImplementation 'androidx.test:runner:1.1.2-alpha02'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0-alpha02'
 
+    /* commons */
+    implementation "commons-io:commons-io:2.6"
+
     /* background-service-lib */
     implementation 'com.flt.servicelib:background-service-lib:2.1'
 
@@ -49,12 +52,19 @@ dependencies {
     /* implementation 'com.wonderkiln:camerakit:0.13.4' */ /* last version to support video */
     implementation 'com.camerakit:jpegkit:0.1.0'
     implementation 'org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.3.21'
-    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.0.0'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.1.1'
 
-    /* jcodec */
-    /* see: http://jcodec.org/ */
+    /* jcodec, see: http://jcodec.org/ */
     implementation 'org.jcodec:jcodec:0.2.3'
     implementation 'org.jcodec:jcodec-android:0.2.3'
 
-    implementation "commons-io:commons-io:2.6"
+    /* room db */
+    implementation "androidx.room:room-runtime:2.1.0-alpha04"
+    annotationProcessor "androidx.room:room-compiler:2.1.0-alpha04"
+    testImplementation "androidx.room:room-testing:2.1.0-alpha04"
+
+    // optional - Kotlin Extensions and coroutines support for Room
+    /*
+    implementation "androidx.room:room-ktx:2.1.0-alpha06"
+    */
 }
