--- a/EmergencyRecorder/app/src/main/AndroidManifest.xml
+++ b/EmergencyRecorder/app/src/main/AndroidManifest.xml
@@ -31,7 +31,9 @@
             android:exported="true">
         </service>
 
-        <activity android:name=".ui.ConfigActivity">
+        <activity
+            android:name=".ui.ConfigActivity"
+            android:launchMode="singleTop">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
@@ -45,6 +47,7 @@
                 <action android:name="android.intent.action.BOOT_COMPLETED" />
                 <action android:name="android.intent.action.QUICKBOOT_POWERON" />
                 <action android:name="android.intent.action.LOCKED_BOOT_COMPLETED" />
+                <category android:name="android.intent.category.DEFAULT"/>
             </intent-filter>
         </receiver>
 
