--- a/EmergencyRecorder/recorder.app/src/main/AndroidManifest.xml
+++ b/EmergencyRecorder/recorder.app/src/main/AndroidManifest.xml
@@ -27,9 +27,8 @@
         tools:ignore="AllowBackup,GoogleAppIndexingWarning">
 
         <activity
-            android:name=".ui.LockScreenActivity"
+            android:name=".ui.LogActivity"
             android:launchMode="singleTop"
-            android:theme="@style/AppThemeTransparent"
             />
 
         <service
