--- a/EmergencyRecorder/recorder.app/build.gradle
+++ b/EmergencyRecorder/recorder.app/build.gradle
@@ -54,7 +54,7 @@ dependencies {
     implementation 'org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.3.21'
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.1.1'
 
-    /* jcodec, see: http://jcodec.org/ */
+    /* jcodec - for creating a video from separate photos, see: http://jcodec.org/ */
     implementation 'org.jcodec:jcodec:0.2.3'
     implementation 'org.jcodec:jcodec-android:0.2.3'
 
@@ -65,7 +65,7 @@ dependencies {
     annotationProcessor "androidx.room:room-compiler:2.1.0-alpha04"
     testImplementation "androidx.room:room-testing:2.1.0-alpha04"
 
-    /* location */
+    /* location libraries */
     implementation "com.google.android.gms:play-services-location:16.0.0"
     implementation "com.what3words:w3w-java-wrapper:3.0.1"
 }
