--- a/EmergencyRecorder/recorder.app/build.gradle
+++ b/EmergencyRecorder/recorder.app/build.gradle
@@ -38,6 +38,9 @@ dependencies {
     androidTestImplementation 'androidx.test:runner:1.2.0-alpha03'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0-alpha03'
 
+    /* ui components */
+    implementation 'com.github.Kunzisoft:Android-SwitchDateTimePicker:2.0'
+
     /* commons */
     implementation "commons-io:commons-io:2.6"
 
