--- a/EmergencyRecorder/recorder.app/build.gradle
+++ b/EmergencyRecorder/recorder.app/build.gradle
@@ -6,8 +6,8 @@ android {
         applicationId "org.policerewired.recorder"
         minSdkVersion 23
         targetSdkVersion 28
-        versionCode 1
-        versionName "0.1"
+        versionCode 2
+        versionName "0.2"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
@@ -24,6 +24,12 @@ android {
     /* jcodec also */
     configurations.all {
         resolutionStrategy.force 'com.google.code.findbugs:jsr305:3.0.2'
+    }
+
+    applicationVariants.all { variant ->
+        variant.outputs.all {
+            outputFileName = "recorder-${variant.name}-${variant.versionName}.apk"
+        }
     }
 }
 
