--- a/EmergencyRecorder/recorder.app/src/main/AndroidManifest.xml
+++ b/EmergencyRecorder/recorder.app/src/main/AndroidManifest.xml
@@ -7,14 +7,18 @@
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
     <uses-permission android:name="android.permission.CAMERA" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
-    <uses-permission android:name="android.permission.READ_PHONE_STATE" />
-    <uses-permission android:name="android.permission.READ_CALL_LOG" /> <!-- required for Android 9 -->
-    <uses-permission android:name="android.permission.PROCESS_OUTGOING_CALLS" />
     <uses-permission android:name="android.permission.RECORD_AUDIO" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW" />
     <uses-permission android:name="android.permission.REQUEST_IGNORE_BATTERY_OPTIMIZATIONS" />
+    <uses-permission android:name="android.permission.PROCESS_OUTGOING_CALLS" />
+
+    <!--
+    <uses-permission android:name="android.permission.READ_PHONE_STATE" />
+    <uses-permission android:name="android.permission.READ_CALL_LOG" />
+    -->
+    <!-- NB. READ_CALL_LOG may be required for Android 9 for the PROCESS_OUTGOING_CALLS permission -->
 
     <application
         android:name=".EmergencyRecorderApp"
@@ -30,6 +34,7 @@
         <activity
             android:name=".ui.LogActivity"
             android:launchMode="singleTop"
+            android:label="@string/activity_log"
             />
 
         <service
