--- a/EmergencyRecorder/recorder.app/build.gradle
+++ b/EmergencyRecorder/recorder.app/build.gradle
@@ -6,8 +6,8 @@ android {
         applicationId "org.policerewired.recorder"
         minSdkVersion 23
         targetSdkVersion 28
-        versionCode 4
-        versionName "0.4"
+        versionCode 5
+        versionName "0.5"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
@@ -58,8 +58,9 @@ dependencies {
     /* ui components */
     implementation 'com.github.Kunzisoft:Android-SwitchDateTimePicker:2.0'
 
-    /* commons */
+    /* common support libraries */
     implementation "commons-io:commons-io:2.6"
+    implementation 'com.intellij:annotations:12.0'
 
     /* background-service-lib */
     implementation 'com.flt.servicelib:background-service-lib:2.1'
@@ -69,11 +70,16 @@ dependencies {
     annotationProcessor 'com.jakewharton:butterknife-compiler:10.1.0'
 
     /* camerakit */
-    implementation 'com.camerakit:camerakit:1.0.0-beta3.11' // video support not included (yet)
+    /* implementation 'com.camerakit:camerakit:1.0.0-beta3.11' */ // video support not included (yet)
     /* implementation 'com.wonderkiln:camerakit:0.13.4' */ // last version to support video
+    /*
     implementation 'com.camerakit:jpegkit:0.1.0'
     implementation 'org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.3.21'
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.1.1'
+     */
+
+    /* camera view */
+    implementation 'com.otaliastudios:cameraview:2.0.0-beta04'
 
     /* jcodec - for creating a video from separate photos, see: http://jcodec.org/ */
     implementation 'org.jcodec:jcodec:0.2.3'
