--- a/EmergencyRecorder/recorder.app/build.gradle
+++ b/EmergencyRecorder/recorder.app/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'com.android.application'
+apply plugin: 'com.google.android.gms.oss-licenses-plugin'
 
 android {
     compileSdkVersion 28
@@ -61,6 +62,7 @@ dependencies {
     /* common support libraries */
     implementation "commons-io:commons-io:2.6"
     implementation 'com.intellij:annotations:12.0'
+    implementation 'com.google.android.gms:play-services-oss-licenses:16.0.2'
 
     /* background-service-lib */
     implementation 'com.flt.servicelib:background-service-lib:2.1'
