--- a/EmergencyRecorder/recorder.app/build.gradle
+++ b/EmergencyRecorder/recorder.app/build.gradle
@@ -40,7 +40,7 @@ android {
 
     applicationVariants.all { variant ->
         variant.outputs.all {
-            outputFileName = "recorder-${variant.name}-${variant.versionName}.apk"
+            outputFileName = "recorder-${variant.versionName}-${variant.name}.apk"
         }
     }
 }
@@ -58,10 +58,11 @@ dependencies {
 
     /* ui components */
     implementation 'com.github.Kunzisoft:Android-SwitchDateTimePicker:2.0'
+    implementation 'com.github.AppIntro:AppIntro:5.1.0'
 
     /* common support libraries */
     implementation "commons-io:commons-io:2.6"
-    implementation 'com.intellij:annotations:12.0'
+    /* implementation 'com.intellij:annotations:12.0' */
     implementation 'com.google.android.gms:play-services-oss-licenses:16.0.2'
 
     /* background-service-lib */
@@ -70,15 +71,6 @@ dependencies {
     /* butterknife */
     implementation 'com.jakewharton:butterknife:10.1.0'
     annotationProcessor 'com.jakewharton:butterknife-compiler:10.1.0'
-
-    /* camerakit */
-    /* implementation 'com.camerakit:camerakit:1.0.0-beta3.11' */ // video support not included (yet)
-    /* implementation 'com.wonderkiln:camerakit:0.13.4' */ // last version to support video
-    /*
-    implementation 'com.camerakit:jpegkit:0.1.0'
-    implementation 'org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.3.21'
-    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.1.1'
-     */
 
     /* camera view */
     implementation 'com.otaliastudios:cameraview:2.0.0-beta04'
