--- a/EmergencyRecorder/recorder.app/src/main/AndroidManifest.xml
+++ b/EmergencyRecorder/recorder.app/src/main/AndroidManifest.xml
@@ -23,18 +23,24 @@
         android:largeHeap="true"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme"
+        android:theme="@style/AppTheme2"
         tools:ignore="AllowBackup,GoogleAppIndexingWarning">
+
+        <activity android:name=".ui.HomeActivity"
+            android:launchMode="singleTop"
+            />
+
         <activity
             android:name=".ui.SetupActivity"
+            android:launchMode="singleTop"
             android:label="@string/activity_setup"
-            >
+            />
 
-        </activity>
         <activity
             android:name=".ui.LogActivity"
             android:label="@string/activity_log"
-            android:launchMode="singleTop" />
+            android:launchMode="singleTop"
+            />
 
         <service
             android:name=".service.RecorderService"
