new home screen, new welcome screens (provisional)

--- a/EmergencyRecorder/recorder.app/src/main/AndroidManifest.xml
+++ b/EmergencyRecorder/recorder.app/src/main/AndroidManifest.xml
@@ -27,8 +27,12 @@
         tools:ignore="AllowBackup,GoogleAppIndexingWarning">
 
         <activity android:name=".ui.HomeActivity"
-            android:launchMode="singleTop"
-            />
+            android:launchMode="singleTop">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
 
         <activity
             android:name=".ui.SetupActivity"
@@ -49,12 +53,8 @@
         <activity
             android:name=".ui.MainActivity"
             android:launchMode="singleTop">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
         </activity>
+
         <activity
             android:name=".ui.RulesActivity"
             android:label="@string/activity_rules"
