--- a/EmergencyRecorder/recorder.app/build.gradle
+++ b/EmergencyRecorder/recorder.app/build.gradle
@@ -47,18 +47,21 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation 'androidx.appcompat:appcompat:1.1.0-alpha04'
+    implementation 'androidx.appcompat:appcompat:1.1.0-alpha05'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'androidx.cardview:cardview:1.0.0'
-    implementation 'com.google.android.material:material:1.1.0-alpha05'
+    implementation 'com.google.android.material:material:1.1.0-alpha06'
     implementation "androidx.work:work-runtime:2.0.1"
     testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'androidx.test:runner:1.2.0-alpha04'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0-alpha04'
+    androidTestImplementation 'androidx.test:runner:1.2.0-beta01'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0-beta01'
 
     /* ui components */
     implementation 'com.github.Kunzisoft:Android-SwitchDateTimePicker:2.0'
     implementation 'com.github.AppIntro:AppIntro:5.1.0'
+
+    /* twitter */
+    implementation 'com.twitter.sdk.android:tweet-ui:3.1.1'
 
     /* common support libraries */
     implementation "commons-io:commons-io:2.6"
@@ -82,17 +85,18 @@ dependencies {
 
     /* room db */
     // alpha04 is the last version that doesn't throw Kotlin errors.
-    // alpha05, alpha06 tested and not working.
-    implementation "androidx.room:room-runtime:2.1.0-alpha04"
-    annotationProcessor "androidx.room:room-compiler:2.1.0-alpha04"
-    testImplementation "androidx.room:room-testing:2.1.0-alpha04"
+    // alpha05, alpha06 tested and not working. alpha07 untested.
+    // beta01 working!
+    implementation "androidx.room:room-runtime:2.1.0-beta01"
+    annotationProcessor "androidx.room:room-compiler:2.1.0-beta01"
+    testImplementation "androidx.room:room-testing:2.1.0-beta01"
 
     /* location libraries */
     implementation "com.google.android.gms:play-services-location:16.0.0"
     implementation "com.what3words:w3w-java-wrapper:3.0.1"
 
-    def appCenterSdkVersion = '1.11.4'
-    implementation "com.microsoft.appcenter:appcenter-analytics:${appCenterSdkVersion}"
-    implementation "com.microsoft.appcenter:appcenter-crashes:${appCenterSdkVersion}"
-    implementation "com.microsoft.appcenter:appcenter-distribute:${appCenterSdkVersion}"
+    /* app center for testing */
+    implementation "com.microsoft.appcenter:appcenter-analytics:1.11.4"
+    implementation "com.microsoft.appcenter:appcenter-crashes:1.11.4"
+    implementation "com.microsoft.appcenter:appcenter-distribute:1.11.4"
 }
