--- a/EmergencyRecorder/recorder.app/build.gradle
+++ b/EmergencyRecorder/recorder.app/build.gradle
@@ -7,8 +7,8 @@ android {
         applicationId "org.policerewired.recorder"
         minSdkVersion 23
         targetSdkVersion 28
-        versionCode 7
-        versionName "0.7"
+        versionCode 8
+        versionName "0.8.0"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
@@ -47,14 +47,14 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation 'androidx.appcompat:appcompat:1.1.0-alpha05'
+    implementation 'androidx.appcompat:appcompat:1.1.0-rc01'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'androidx.cardview:cardview:1.0.0'
-    implementation 'com.google.android.material:material:1.1.0-alpha06'
-    implementation "androidx.work:work-runtime:2.0.1"
+    implementation 'com.google.android.material:material:1.1.0-alpha08'
+    implementation "androidx.work:work-runtime:2.1.0"
     testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'androidx.test:runner:1.2.0-beta01'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0-beta01'
+    androidTestImplementation 'androidx.test:runner:1.3.0-alpha01'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0-alpha01'
 
     /* ui components */
     implementation 'com.github.Kunzisoft:Android-SwitchDateTimePicker:2.0'
@@ -65,8 +65,7 @@ dependencies {
 
     /* common support libraries */
     implementation "commons-io:commons-io:2.6"
-    /* implementation 'com.intellij:annotations:12.0' */
-    implementation 'com.google.android.gms:play-services-oss-licenses:16.0.2'
+    implementation 'com.google.android.gms:play-services-oss-licenses:17.0.0'
 
     /* background-service-lib */
     implementation 'com.flt.servicelib:background-service-lib:2.1'
@@ -76,7 +75,7 @@ dependencies {
     annotationProcessor 'com.jakewharton:butterknife-compiler:10.1.0'
 
     /* camera view */
-    implementation 'com.otaliastudios:cameraview:2.0.0-beta04'
+    implementation 'com.otaliastudios:cameraview:2.0.0-beta06'
     implementation 'androidx.exifinterface:exifinterface:1.0.0'
 
     /* jcodec - for creating a video from separate photos, see: http://jcodec.org/ */
@@ -84,15 +83,17 @@ dependencies {
     implementation 'org.jcodec:jcodec-android:0.2.3'
 
     /* room db */
+    // 2.1
     // alpha04 is the last version that doesn't throw Kotlin errors.
     // alpha05, alpha06 tested and not working. alpha07 untested.
     // beta01 working!
-    implementation "androidx.room:room-runtime:2.1.0-beta01"
-    annotationProcessor "androidx.room:room-compiler:2.1.0-beta01"
-    testImplementation "androidx.room:room-testing:2.1.0-beta01"
+    // 2.2 untested
+    implementation "androidx.room:room-runtime:2.2.0-alpha01"
+    annotationProcessor "androidx.room:room-compiler:2.2.0-alpha01"
+    testImplementation "androidx.room:room-testing:2.2.0-alpha01"
 
     /* location libraries */
-    implementation "com.google.android.gms:play-services-location:16.0.0"
+    implementation "com.google.android.gms:play-services-location:17.0.0"
     implementation "com.what3words:w3w-java-wrapper:3.0.1"
 
     /* app center for testing */
